--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -2,6 +2,13 @@
   width: 205px;
   margin: auto;
   .card-body {
+    .avatar {
+      height: 75px;
+      width: 75px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: rgba(0, 0, 0, 0.8) 0 2px 5px;
+    }
     .card-sub-title {
       font-size: 12px !important;
     }
