--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,6 +3,7 @@
 html,
 body {
   min-height: 100%;
+  background-color: #454b5e !important;
 }
 
 .main-container {
@@ -25,13 +26,14 @@ body {
   .body-container {
     max-width: 1440px;
     margin: auto;
-    margin-top: 50px;
     .card-container {
       margin: auto;
       justify-content: center;
-      .row {
-        width: 100%;
-      }
     }
   }
+}
+
+.spinner-container {
+  margin-top: 7em;
+  color: #c7cde0;
 }
