--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -225,3 +225,12 @@ $breakpoint-mobile: 567px;
     margin: 1.5rem;
   }
 }
+
+$breakpoint-sm-mobile: 412px;
+@media (max-width: $breakpoint-sm-mobile) {
+  .timeline {
+    &:before {
+      height: 130vh;
+    }
+  }
+}
